--- a/index.html
+++ b/index.html
@@ -352,7 +352,8 @@
         </div>
         <div class="position-relative">
           <div class="responsive max-w-1000 mx-auto overflow-hidden">
-            <div class="slider-box p-md-40 p-3 rounded-24 d-flex max-w-1000 mx-auto justify-content-between bg-white flex-md-nowrap flex-wrap-reverse position-relative">
+            <div
+              class="slider-box p-md-40 p-3 rounded-24 d-flex max-w-1000 mx-auto justify-content-between bg-white flex-md-nowrap flex-wrap-reverse position-relative">
               <div class="max-md-w-551  pt-md-0 mt-18">
                 <h2 class="fw-bold line-height-55 fs-5xl color-black m-0 font-Helvetica">Prize-Winning Projects</h2>
                 <h5 class="fw-bold fs-2xl font-Helvetica line-height-27  m-0 pt-3">The Story of <span
@@ -372,7 +373,8 @@
                 <img src="./assets/img/Willarieldurants1.png" alt="Will-ariel-durants1" class="w-100">
               </div>
             </div>
-            <div class="slider-box p-md-40 p-3 rounded-24 d-flex max-w-1000 mx-auto justify-content-between bg-white flex-md-nowrap flex-wrap-reverse position-relative">
+            <div
+              class="slider-box p-md-40 p-3 rounded-24 d-flex max-w-1000 mx-auto justify-content-between bg-white flex-md-nowrap flex-wrap-reverse position-relative">
               <div class="max-md-w-551  pt-md-0 mt-18">
                 <h2 class="fw-bold line-height-55 fs-5xl color-black m-0 font-Helvetica">Prize-Winning Projects</h2>
                 <h5 class="fw-bold fs-2xl font-Helvetica line-height-27  m-0 pt-3">The Story of <span
@@ -392,7 +394,8 @@
                 <img src="./assets/img/Willarieldurants1.png" alt="Will-ariel-durants1" class="w-100">
               </div>
             </div>
-            <div class="slider-box p-md-40 p-3 rounded-24 d-flex max-w-1000 mx-auto justify-content-between bg-white flex-md-nowrap flex-wrap-reverse position-relative">
+            <div
+              class="slider-box p-md-40 p-3 rounded-24 d-flex max-w-1000 mx-auto justify-content-between bg-white flex-md-nowrap flex-wrap-reverse position-relative">
               <div class="max-md-w-551  pt-md-0 mt-18">
                 <h2 class="fw-bold line-height-55 fs-5xl color-black m-0 font-Helvetica">Prize-Winning Projects</h2>
                 <h5 class="fw-bold fs-2xl font-Helvetica line-height-27  m-0 pt-3">The Story of <span
@@ -412,7 +415,7 @@
                 <img src="./assets/img/Willarieldurants1.png" alt="Will-ariel-durants1" class="w-100">
               </div>
             </div>
-           
+
           </div>
           <button
             class="pre-btn d-xl-block d-none slick-btn rounded-circle  d-flex justify-content-center align-items-center position-absolute">
@@ -435,9 +438,9 @@
       </div>
     </div>
   </section>
-  <section class="bg-Services5 position-relative d-none">
+  <section class="bg-Services5 position-relative d">
     <img src="./assets/img/svg/Ellipse91.svg" alt="ellipse" class="position-absolute Ellipse91 max-w-399 w-100  z-0">
-    <img src="./assets/img/svg/Ellipse92.svg" alt="ellipse" class="position-absolute Ellipse92 max-w-399 w-100 ">
+    <img src="./assets/img/svg/Ellipse92.svg" alt="ellipse" class="position-absolute Ellipse92 max-w-399 w-100   z-0">
     <div class="container max-w-1140 ">
       <h2
         class="fw-bold fs-5xl text-center line-height-55 m-0 heading pt-lg-120 pt-sm-60 pt-5 pb-lg-64 pb-4 font-Helvetica">
@@ -514,7 +517,7 @@
       </div>
     </div>
   </section>
-  <section class="position-relative d-n one">
+  <section class="position-relative d-none">
     <img src="./assets/img/Group61.png" alt="group61" class="position-absolute group61  z-n1 d-none d-lg-block ">
     <img src="./assets/img/svg/Ellipse7first.svg" alt="ellipse"
       class="position-absolute Ellipse7first  z-n1 max-w-399  w-100 ">
@@ -554,6 +557,132 @@
               class="text z-1 fw-bold fs-xl line-height-32 font-Helvetica heading">Apply Now</span>
             <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn"></button>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="bg-frame7  position-relative " id="curriculum">
+    <img src="./assets/img/svg/Ellipse71.svg" alt="ellipse"
+      class="position-absolute ellipse71 z -0 bg-da nger max-w-355 w-100   ">
+    <img src="./assets/img/svg/Ellipse72.svg" alt="ellipse" class="position-absolute ellipse72 z-0  ">
+    <div class="container max-w-1140">
+      <div class="d-flex flex-column align-items-center">
+        <h2 class="fw-bold font-Helvetica fs-6xl line-height-68 heading pt-lg-130 pt-sm-60 pt-5 m-0 text-center">Pro
+          Bono Publico </h2>
+        <h6 class="font-Helvetica fw-normal fs-lg line-height-25 color-gray m-0 pt-3 text-center">Get Expert Guidance to
+          Bring Your Vision to Life.</h6>
+      </div>
+      <div class="timeline pt-lg-64 pt-4">
+        <div class="timeline-item2">
+          <div class="position-absolute left-line2"></div>
+          <div class="timeline-icon2 ">
+            <img src="./assets/img/svg/week1.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-week text-white fs-2xl line-height-38  fw-bold font-Helvetica w-100">Week 1–4</h4>
+          <div class="timeline-content2 pb-3">
+            <h5 class="font-Helvetica fw-noraml text-white fs-lg line-height-25  m-0">Unveiling Topics, Delving into
+              Resources, Documentary Immersion</h5>
+            <h6 class="font-Helvetica fw-normal pt-2 fs-lg line-height-25 color-gray m-0">Embarking on a journey of
+              historical exploration involves a meticulous process of unveiling topics, delving into resources, and
+              immersing oneself in the rich tapestry of documentaries.</h6>
+          </div>
+        </div>
+        <div class="timeline-item2">
+          <div class="position-absolute left-line2"></div>
+          <div class="timeline-icon2 ">
+            <img src="./assets/img/svg/Week5.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-week text-white fs-2xl line-height-38  fw-bold font-Helvetica w-100">Week 5–6</h4>
+          <div class="timeline-content2 pb-3">
+            <h5 class="font-Helvetica fw-noraml text-white fs-lg line-height-25  m-0">Shaping Your Central Pillar</h5>
+            <h6 class="font-Helvetica fw-normal pt-2 fs-lg line-height-25 color-gray m-0">Embarking on a journey of
+              historical exploration involves a meticulous process of unveiling topics, delving into resources, and
+              immersing oneself in the rich tapestry of documentaries.</h6>
+          </div>
+        </div>
+        <div class="timeline-item2">
+          <div class="position-absolute left-line2"></div>
+          <div class="timeline-icon2 ">
+            <img src="./assets/img/svg/week7.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-week text-white fs-2xl line-height-38  fw-bold font-Helvetica w-100">Week 7–12</h4>
+          <div class="timeline-content2 pb-3">
+            <h5 class="font-Helvetica fw-noraml text-white fs-lg line-height-25  m-0">Crafting a Roadmap</h5>
+            <h6 class="font-Helvetica fw-normal pt-2 fs-lg line-height-25 color-gray m-0">Embarking on a journey of
+              historical exploration involves a meticulous process of unveiling topics, delving into resources, and
+              immersing oneself in the rich tapestry of documentaries.</h6>
+          </div>
+        </div>
+        <div class="timeline-item2">
+          <div class="position-absolute left-line2"></div>
+          <div class="timeline-icon2 ">
+            <img src="./assets/img/svg/week13.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-week text-white fs-2xl line-height-38  fw-bold font-Helvetica w-100">Week 13–14</h4>
+          <div class="timeline-content2 pb-3">
+            <h5 class="font-Helvetica fw-noraml text-white fs-lg line-height-25  m-0">Igniting the Reader's Curiosity
+            </h5>
+            <h6 class="font-Helvetica fw-normal pt-2 fs-lg line-height-25 color-gray m-0">Embarking on a journey of
+              historical exploration involves a meticulous process of unveiling topics, delving into resources, and
+              immersing oneself in the rich tapestry of documentaries.</h6>
+          </div>
+        </div>
+        <div class="timeline-item2">
+          <div class="position-absolute left-line2"></div>
+          <div class="timeline-icon2 ">
+            <img src="./assets/img/svg/week16.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-week text-white fs-2xl line-height-38  fw-bold font-Helvetica w-100">Week 16–24</h4>
+          <div class="timeline-content2 pb-3">
+            <h5 class="font-Helvetica fw-noraml text-white fs-lg line-height-25  m-0">Weaving the Main Narrative</h5>
+            <h6 class="font-Helvetica fw-normal pt-2 fs-lg line-height-25 color-gray m-0">Embarking on a journey of
+              historical exploration involves a meticulous process of unveiling topics, delving into resources, and
+              immersing oneself in the rich tapestry of documentaries.</h6>
+          </div>
+        </div>
+        <div class="timeline-item2">
+          <div class="position-absolute left-line2"></div>
+          <div class="timeline-icon2 ">
+            <img src="./assets/img/svg/week25.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-week text-white fs-2xl line-height-38  fw-bold font-Helvetica w-100">Week 25–26</h4>
+          <div class="timeline-content2 pb-3">
+            <h5 class="font-Helvetica fw-noraml text-white fs-lg line-height-25  m-0">Crafting the Grand Finale</h5>
+            <h6 class="font-Helvetica fw-normal pt-2 fs-lg line-height-25 color-gray m-0">Embarking on a journey of
+              historical exploration involves a meticulous process of unveiling topics, delving into resources, and
+              immersing oneself in the rich tapestry of documentaries.</h6>
+          </div>
+        </div>
+        <div class="timeline-item2">
+          <div class="position-absolute left-line2"></div>
+          <div class="timeline-icon2 ">
+            <img src="./assets/img/svg/week27.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-week text-white fs-2xl line-height-38  fw-bold font-Helvetica w-100">Week 27–29</h4>
+          <div class="timeline-content2 pb-3">
+            <h5 class="font-Helvetica fw-noraml text-white fs-lg line-height-25  m-0">Refining the Manuscript</h5>
+            <h6 class="font-Helvetica fw-normal pt-2 fs-lg line-height-25 color-gray m-0">Embarking on a journey of
+              historical exploration involves a meticulous process of unveiling topics, delving into resources, and
+              immersing oneself in the rich tapestry of documentaries.</h6>
+          </div>
+        </div>
+        <div class="timeline-item2 pb-0">
+          <div class="position-absolute "></div>
+          <div class="timeline-icon2 ">
+            <img src="./assets/img/svg/week30.svg" alt="timelineicon">
+          </div>
+          <h4 class="timeline-week text-white fs-2xl line-height-38  fw-bold font-Helvetica w-100">Week 30</h4>
+          <div class="timeline-content2 pb-3">
+            <h5 class="font-Helvetica fw-noraml text-white fs-lg line-height-25  m-0"> Presenting Your Masterpiece</h5>
+            <h6 class="font-Helvetica fw-normal pt-2 fs-lg line-height-25 color-gray m-0">Embarking on a journey of
+              historical exploration involves a meticulous process of unveiling topics, delving into resources, and
+              immersing oneself in the rich tapestry of documentaries.</h6>
+          </div>
+        </div>
+      </div>
+      <div class="pt-lg-64 pt-5 pb-lg-130 pb-sm-60 pb-5 d-flex justify-content-center">
+        <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
+            class="text z-1 fw-bold fs-lg line-height-32 font-Helvetica heading">View the Curriculum</span>
+          <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn"></button>
       </div>
     </div>
   </section>
