--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
       </div>
     </div>
   </section>
-  <section class="bg-Services5 position-relative d">
+  <section class="bg-Services5 position-relative d-none">
     <img src="./assets/img/svg/Ellipse91.svg" alt="ellipse" class="position-absolute Ellipse91 max-w-399 w-100  z-0">
     <img src="./assets/img/svg/Ellipse92.svg" alt="ellipse" class="position-absolute Ellipse92 max-w-399 w-100   z-0">
     <div class="container max-w-1140 ">
@@ -560,7 +560,7 @@
       </div>
     </div>
   </section>
-  <section class="bg-frame7  position-relative " id="curriculum">
+  <section class="bg-frame7  position-relative d-none" id="curriculum">
     <img src="./assets/img/svg/Ellipse71.svg" alt="ellipse"
       class="position-absolute ellipse71 z -0 bg-da nger max-w-355 w-100   ">
     <img src="./assets/img/svg/Ellipse72.svg" alt="ellipse" class="position-absolute ellipse72 z-0  ">
@@ -686,6 +686,47 @@
       </div>
     </div>
   </section>
+  <section class="position-relative">
+    <img src="./assets/img/Frame8.png" alt="frame8" class="position-absolute frame8 z-n1 d-none d-lg-block">
+    <img src="./assets/img/svg/Ellipsefirst.svg" alt="ellipse"
+      class="position-absolute Ellipsefirst  z-n1 max-w-370 w-100 animation-fadein">
+    <div class="container max-w-1140 ">
+      <div class="py-lg-130 py-sm-60 py-5 max-w-709   ">
+        <h2 class="line-height-55 fw-bold fs-5xl  m-0 font-Helvetica ">Apply in Under an Hour</h2>
+        <h6 class=" fs-lg pt-3 m-0 color-black opacity-7 pb-32 line-height-25 fw-normal font-Helvetica">Lorem ipsum dolor sit amet
+          consectetur. Sit vel a nunc enim amet phasellus fringilla. Sed vel egestas at cras rutrum nunc massa . Lectus
+          sed vestibulum facilisis odio.</h6>
+        <div class="py-sm-20 py-3 px-4  d-flex gap-20 align-items-center box-3">
+          <img src="./assets/img/svg/Online.svg" alt="online" class="minbox-3">
+          <div class="d-block flex-column">
+            <h5 class="font-Helvetica fw-normal line-height-38 fs-2xl m-0">Application</h5>
+            <h6 class="pt-1 color-black opacity-7 fw-normal fs-lg line-height-25 m-0  font-Helvetica">Lorem ipsum dolor sit amet
+              consectetur. Sit vel a nunc enim amet phasellus fringilla. Sed vel egestas at cras rutrum nunc massa.</h6>
+          </div>
+        </div>
+        <div class="py-sm-20 py-3 px-4  d-flex gap-20 align-items-center mt-26 box-3" >
+          <img src="./assets/img/svg/Finalist.svg" alt="financial" class="minbox-3">
+          <div class="d-block flex-column">
+            <h5 class="font-Helvetica fw-normal line-height-38 fs-2xl m-0">Finalist Interview</h5>
+            <h6 class="pt-1 color-black opacity-7 fw-normal fs-lg line-height-25 m-0  font-Helvetica">Lorem ipsum dolor sit amet
+              consectetur. Sit vel a nunc enim amet phasellus fringilla. Sed vel egestas at cras rutrum nunc massa.</h6>
+          </div>
+        </div>
+        <div class="py-sm-20 py-3 px-4  d-flex gap-20 align-items-center mt-26 box-3">
+          <img src="./assets/img/svg/Decision.svg" alt="decision" class="minbox-3">
+          <div class="d-block flex-column">
+            <h5 class="font-Helvetica fw-normal line-height-38 fs-2xl m-0">Decision Date</h5>
+            <h6 class="pt-1 color-black opacity-7 fw-normal fs-lg line-height-25 m-0  font-Helvetica">Lorem ipsum dolor sit amet
+              consectetur. Sit vel a nunc enim amet phasellus fringilla. Sed vel egestas at cras rutrum nunc massa.</h6>
+          </div>
+        </div>
+        <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300 mt-5"><span
+            class="text z-1 fw-bold fs-xl line-height-32 font-Helvetica heading">Apply by February 1, 2025</span>
+          <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn"></button>
+      </div>
+    </div>
+  </section>
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
     integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -696,8 +737,8 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
   <script src="./assets/js/app.js"></script>
-  <script>
-  </script>
+  
+  
 </body>
 
 </html>
