--- a/index.html
+++ b/index.html
@@ -726,8 +726,12 @@
       </div>
     </div>
   </section>
-  <section class="bg-10 position-relative" id="issues">
+  <section class="bg-10 position-relative overflow-hidden d-none" id="issues">
     <img src="./assets/img/Group100.png" alt="" class="bgtab-2 position-absolute">
+    <img src="./assets/img/svg/Ellipse0101.svg" alt="ellipse" class="position-absolute Ellipse0101 z-0">
+    <img src="./assets/img/svg/Ellipse0102.svg" alt="ellipse" class="position-absolute Ellipse0102">
+    <img src="./assets/img/svg/Ellipse0103.svg" alt="ellipse" class="position-absolute Ellipse0103">
+    <img src="./assets/img/svg/Group10.svg" alt="group" class="position-absolute group10">
     <div class="container max-w-1140">
       <div class="d-flex flex-column align-items-center pb-lg-65 pb-4">
         <h2 class="heading text-center fw-bold line-height-55 fs-5xl pt-lg-125 pt-sm-60 pt-5  font-Helvetica m-0">Why
@@ -735,8 +739,8 @@
         <h6 class="fw-normal fs-lg line-height-25 font-Helvetica m-0 color-gray text-center pt-3">Tackle the world’s most
           pressing issues of the past.</h6>
       </div>
-      <div class="row border-top pb-lg-156 pb-sm-60 pb-5">
-        <div class="col-md-3 col-12">
+      <div class="row border-top pb-lg-156 pb-sm-60 pb-5 z-1">
+        <div class="col-md-3 col-12 z-1">
           <div class="border-right max-w-md-338 allbtn2">
             <div class="tab-2 p-4  d-flex justify-content-between tabbtn2  " onclick="clicktab('1tab')">
               <h5 class="fw-bold fs-lg line-height-25 font-Helvetica color-gray m-0 tab2-text">Political History</h5>
@@ -906,6 +910,123 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="bg-fre-img position-relative">
+    <img src="./assets/img/svg/Ellipse101.svg" alt="Ellipse101"
+      class="position-absolute Ellipse101 z-0   max-w-390 w-100 ">
+    <img src="./assets/img/svg/Ellipse102.svg" alt="Ellipse102"
+      class="position-absolute Ellipse102 z-0  max-w-390 w-100  d-none d-lg-block">
+    <img src="./assets/img/Group10.png" alt="group10" class="position-absolute Group10 z-0  max-w-826 w-100">
+    <div class="container max-w-1140">
+      <div class="pt-lg-150 pt-sm-60 pt-5 pb-lg-64 pb-5 d-flex flex-column align-items-center">
+        <h2 class="fw-bold fs-5xl color-black  text-center line-height-55 m-0 font-Helvetica z-1 ">Frequently Asked
+          Questions</h2>
+        <h6 class="max-w-730 fs-md pt-3 m-0 color-black opacity-7 text-center line-height-25 fw-normal font-Helvetica z-1">Lorem
+          ipsum dolor sit amet consectetur. Tristique pharetra augue et sed venenatis. Adipiscing morbi enim vulputate
+          enim. Nisi justo interdum sem risus consectetur id.</h6>
+      </div>
+      <div class="row pb-48">
+        <div class="col-md-6 col-12 z-1">
+          <div class="overflow-hidden  acc-Item rounded-6 cursor-pointer">
+            <div class="d-flex justify-content-between align-items-center">
+              <h5 class="font-Helvetica fw-normal fs-lg line-height-24 m-0 color-black opacity-7">Who can submit?</h5>
+              <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M13 7.99609H8V12.9961C8 13.2613 7.89464 13.5157 7.70711 13.7032C7.51957 13.8907 7.26522 13.9961 7 13.9961C6.73478 13.9961 6.48043 13.8907 6.29289 13.7032C6.10536 13.5157 6 13.2613 6 12.9961V7.99609H1C0.734784 7.99609 0.48043 7.89074 0.292893 7.7032C0.105357 7.51566 0 7.26131 0 6.99609C0 6.73088 0.105357 6.47652 0.292893 6.28899C0.48043 6.10145 0.734784 5.99609 1 5.99609H6V0.996094C6 0.730877 6.10536 0.476523 6.29289 0.288987C6.48043 0.10145 6.73478 -0.00390625 7 -0.00390625C7.26522 -0.00390625 7.51957 0.10145 7.70711 0.288987C7.89464 0.476523 8 0.730877 8 0.996094V5.99609H13C13.2652 5.99609 13.5196 6.10145 13.7071 6.28899C13.8946 6.47652 14 6.73088 14 6.99609C14 7.26131 13.8946 7.51566 13.7071 7.7032C13.5196 7.89074 13.2652 7.99609 13 7.99609Z" fill="#4D4D4D"/>
+              </svg>
+                
+            </div>
+            <div class="acc-para pt-20">
+              <h6 class="font-Helvetica fw-normal fs-lg line-height-24 m-0 color-black opacity-7">Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Fugiat nostrum id optio doloremque? Fugiat in quia rem distinctio eum quidem minus
+                eligendi sunt officiis accusantium!</h6>
+            </div>
+          </div>
+          <div class="overflow-hidden  acc-Item rounded-6 mt-4 cursor-pointer">
+            <div class="d-flex justify-content-between align-items-center">
+              <h5 class="font-Helvetica fw-normal fs-lg color-black opacity-7 line-height-24 m-0">What do you look for?</h5>
+              <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M13 7.99609H8V12.9961C8 13.2613 7.89464 13.5157 7.70711 13.7032C7.51957 13.8907 7.26522 13.9961 7 13.9961C6.73478 13.9961 6.48043 13.8907 6.29289 13.7032C6.10536 13.5157 6 13.2613 6 12.9961V7.99609H1C0.734784 7.99609 0.48043 7.89074 0.292893 7.7032C0.105357 7.51566 0 7.26131 0 6.99609C0 6.73088 0.105357 6.47652 0.292893 6.28899C0.48043 6.10145 0.734784 5.99609 1 5.99609H6V0.996094C6 0.730877 6.10536 0.476523 6.29289 0.288987C6.48043 0.10145 6.73478 -0.00390625 7 -0.00390625C7.26522 -0.00390625 7.51957 0.10145 7.70711 0.288987C7.89464 0.476523 8 0.730877 8 0.996094V5.99609H13C13.2652 5.99609 13.5196 6.10145 13.7071 6.28899C13.8946 6.47652 14 6.73088 14 6.99609C14 7.26131 13.8946 7.51566 13.7071 7.7032C13.5196 7.89074 13.2652 7.99609 13 7.99609Z"
+                  fill="#4D4D4D" />
+              </svg>
+            </div>
+            <div class="acc-para pt-20">
+              <h6 class="font-Helvetica fw-normal fs-lg opacity-7 color-black line-height-24 m-0">Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Fugiat nostrum id optio doloremque? Fugiat in quia rem distinctio eum quidem minus
+                eligendi sunt officiis accusantium!</h6>
+            </div>
+          </div>
+          <div class="overflow-hidden  acc-Item rounded-6 mt-4 cursor-pointer">
+            <div class="d-flex justify-content-between align-items-center ">
+              <h5 class="font-Helvetica fw-normal fs-lg color-black opacity-7 line-height-24 m-0 ">What can I spend the scholarship or grant
+                on?</h5>
+              <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M13 7.99609H8V12.9961C8 13.2613 7.89464 13.5157 7.70711 13.7032C7.51957 13.8907 7.26522 13.9961 7 13.9961C6.73478 13.9961 6.48043 13.8907 6.29289 13.7032C6.10536 13.5157 6 13.2613 6 12.9961V7.99609H1C0.734784 7.99609 0.48043 7.89074 0.292893 7.7032C0.105357 7.51566 0 7.26131 0 6.99609C0 6.73088 0.105357 6.47652 0.292893 6.28899C0.48043 6.10145 0.734784 5.99609 1 5.99609H6V0.996094C6 0.730877 6.10536 0.476523 6.29289 0.288987C6.48043 0.10145 6.73478 -0.00390625 7 -0.00390625C7.26522 -0.00390625 7.51957 0.10145 7.70711 0.288987C7.89464 0.476523 8 0.730877 8 0.996094V5.99609H13C13.2652 5.99609 13.5196 6.10145 13.7071 6.28899C13.8946 6.47652 14 6.73088 14 6.99609C14 7.26131 13.8946 7.51566 13.7071 7.7032C13.5196 7.89074 13.2652 7.99609 13 7.99609Z"
+                  fill="#4D4D4D"  />
+              </svg>
+            </div>
+            <div class="acc-para pt-20">
+              <h6 class="font-Helvetica fw-normal fs-lg color-black opacity-7 line-height-24 m-0">Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Fugiat nostrum id optio doloremque? Fugiat in quia rem distinctio eum quidem minus
+                eligendi sunt officiis accusantium!</h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-12 z-1 pt-4 pt-md-0">
+          <div class="overflow-hidden  acc-Item rounded-6 cursor-pointer">
+            <div class="d-flex justify-content-between align-items-center">
+              <h5 class="font-Helvetica fw-normal fs-lg color-black opacity-7 line-height-24 m-0">How frequently do you publish?</h5>
+              <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M13 7.99609H8V12.9961C8 13.2613 7.89464 13.5157 7.70711 13.7032C7.51957 13.8907 7.26522 13.9961 7 13.9961C6.73478 13.9961 6.48043 13.8907 6.29289 13.7032C6.10536 13.5157 6 13.2613 6 12.9961V7.99609H1C0.734784 7.99609 0.48043 7.89074 0.292893 7.7032C0.105357 7.51566 0 7.26131 0 6.99609C0 6.73088 0.105357 6.47652 0.292893 6.28899C0.48043 6.10145 0.734784 5.99609 1 5.99609H6V0.996094C6 0.730877 6.10536 0.476523 6.29289 0.288987C6.48043 0.10145 6.73478 -0.00390625 7 -0.00390625C7.26522 -0.00390625 7.51957 0.10145 7.70711 0.288987C7.89464 0.476523 8 0.730877 8 0.996094V5.99609H13C13.2652 5.99609 13.5196 6.10145 13.7071 6.28899C13.8946 6.47652 14 6.73088 14 6.99609C14 7.26131 13.8946 7.51566 13.7071 7.7032C13.5196 7.89074 13.2652 7.99609 13 7.99609Z"
+                  fill="#4D4D4D"/>
+              </svg>
+            </div>
+            <div class="acc-para pt-20">
+              <h6 class="font-Helvetica fw-normal fs-lg color-black opacity-7 line-height-24 m-0">Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Fugiat nostrum id optio doloremque? Fugiat in quia rem distinctio eum quidem minus
+                eligendi sunt officiis accusantium!</h6>
+            </div>
+          </div>
+          <div class="overflow-hidden  acc-Item rounded-6 mt-4 cursor-pointer" >
+            <div class="d-flex justify-content-between align-items-center">
+              <h5 class="font-Helvetica fw-normal fs-lg color-black opacity-7 line-height-24 m-0">How many papers do you publish?</h5>
+              <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M13 7.99609H8V12.9961C8 13.2613 7.89464 13.5157 7.70711 13.7032C7.51957 13.8907 7.26522 13.9961 7 13.9961C6.73478 13.9961 6.48043 13.8907 6.29289 13.7032C6.10536 13.5157 6 13.2613 6 12.9961V7.99609H1C0.734784 7.99609 0.48043 7.89074 0.292893 7.7032C0.105357 7.51566 0 7.26131 0 6.99609C0 6.73088 0.105357 6.47652 0.292893 6.28899C0.48043 6.10145 0.734784 5.99609 1 5.99609H6V0.996094C6 0.730877 6.10536 0.476523 6.29289 0.288987C6.48043 0.10145 6.73478 -0.00390625 7 -0.00390625C7.26522 -0.00390625 7.51957 0.10145 7.70711 0.288987C7.89464 0.476523 8 0.730877 8 0.996094V5.99609H13C13.2652 5.99609 13.5196 6.10145 13.7071 6.28899C13.8946 6.47652 14 6.73088 14 6.99609C14 7.26131 13.8946 7.51566 13.7071 7.7032C13.5196 7.89074 13.2652 7.99609 13 7.99609Z"
+                  fill="#4D4D4D"/>
+              </svg>
+            </div>
+            <div class="acc-para pt-20">
+              <h6 class="font-Helvetica fw-normal fs-lg color-black opacity-7 line-height-24 m-0">Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Fugiat nostrum id optio doloremque? Fugiat in quia rem distinctio eum quidem minus
+                eligendi sunt officiis accusantium!</h6>
+            </div>
+          </div>
+          <div class="overflow-hidden  acc-Item rounded-6 mt-4 cursor-pointer">
+            <div class="d-flex justify-content-between align-items-center">
+              <h5 class="font-Helvetica fw-normal fs-lg color-black opacity-7 line-height-24 m-0">Who is eligible for Pro Bono Publico?</h5>
+              <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M13 7.99609H8V12.9961C8 13.2613 7.89464 13.5157 7.70711 13.7032C7.51957 13.8907 7.26522 13.9961 7 13.9961C6.73478 13.9961 6.48043 13.8907 6.29289 13.7032C6.10536 13.5157 6 13.2613 6 12.9961V7.99609H1C0.734784 7.99609 0.48043 7.89074 0.292893 7.7032C0.105357 7.51566 0 7.26131 0 6.99609C0 6.73088 0.105357 6.47652 0.292893 6.28899C0.48043 6.10145 0.734784 5.99609 1 5.99609H6V0.996094C6 0.730877 6.10536 0.476523 6.29289 0.288987C6.48043 0.10145 6.73478 -0.00390625 7 -0.00390625C7.26522 -0.00390625 7.51957 0.10145 7.70711 0.288987C7.89464 0.476523 8 0.730877 8 0.996094V5.99609H13C13.2652 5.99609 13.5196 6.10145 13.7071 6.28899C13.8946 6.47652 14 6.73088 14 6.99609C14 7.26131 13.8946 7.51566 13.7071 7.7032C13.5196 7.89074 13.2652 7.99609 13 7.99609Z"
+                  fill="#4D4D4D" />
+              </svg>
+            </div>
+            <div class="acc-para pt-20">
+              <h6 class="font-Helvetica fw-normal fs-lg color-black opacity-7 line-height-24 m-0">Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Fugiat nostrum id optio doloremque? Fugiat in quia rem distinctio eum quidem minus
+                eligendi sunt officiis accusantium!</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="pb-lg-84 pb-sm-60 pb-5 d-flex justify-content-center ">
+        <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300 z-1"><span
+            class="text z-1 fw-bold fs-lg line-height-32 font-Helvetica heading">View All</span>
+          <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn" class="z-1"></button>
       </div>
     </div>
   </section>
