--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
       </div>
     </div>
   </section>
-  <section class="bg-fre-img position-relative">
+  <section class="bg-fre-img position-relative d-none">
     <img src="./assets/img/svg/Ellipse101.svg" alt="Ellipse101"
       class="position-absolute Ellipse101 z-0   max-w-390 w-100 ">
     <img src="./assets/img/svg/Ellipse102.svg" alt="Ellipse102"
@@ -1027,6 +1027,73 @@
         <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300 z-1"><span
             class="text z-1 fw-bold fs-lg line-height-32 font-Helvetica heading">View All</span>
           <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn" class="z-1"></button>
+      </div>
+    </div>
+  </section>
+  <section class="position-relative" id="grants">
+    <img src="./assets/img/Group11.png" alt="group11" class="position-absolute group11 z-n1  d-none d-lg-block">
+    <div class="container max-w-1140">
+      <div class="pb-lg-38 z-1">
+        <h2 class="fs-7xl fw-bold line-height-83 m-0 color-black pt-lg-100 pt-sm-60  font-Eb-Garamond ">Dive Into
+          The Past</h2>
+        <h6 class="max-w-534 fs-lg pt-3 m-0 color-black opacity-7 pb-32 line-height-25 fw-normal font-Helvetica">Lorem ipsum dolor
+          sit amet consectetur. Sit vel a nunc enim amet phasellus fringilla. Sed vel egestas at cras rutrum nunc massa
+          . Lectus sed vestibulum facilisis odio.</h6>
+        <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
+            class="text z-1 fw-bold fs-xl line-height-32 font-Helvetica heading">Submit Now</span>
+          <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn"></button>
+        <h6 class="fs-xl fw-noraml line-height-32 font-Helvetica pt-1 color-black opacity-7 m-0">Submit by May 1, 2023</h6>
+      </div>
+      <div class="pb-66">
+        <div class="row  pt-44 ">
+          <div class="col-lg-4 col-sm-6  col-12 ">
+            <div class="d-flex gap-lg-3 gap-2 align-items-center">
+              <img src="./assets/img/svg/Cash.svg" alt="Cash">
+              <h6 class="fs-xl fw-normal line-height-32  m-0 font-Helvetica"><span class="fw-bold ">$60,000</span> Cash
+                Prizes</h6>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6  col-12  pt-4 pt-sm-0  d-lg-flex d-block justify-content-center  ">
+            <div class="d-flex gap-lg-3 gap-2 align-items-center max-w-255 w-100">
+              <img src="./assets/img/svg/Acceptance.svg" alt="Acceptance">
+              <h6 class="fs-xl fw-normal line-height-32  m-0 font-Helvetica"><span class="fw-bold">6%</span> Acceptance
+                Rate</h6>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6  col-12  d-lg-flex pt-4 pt-lg-0 d-block justify-content-end">
+            <div class="d-flex gap-lg-3 gap-2  align-items-center max-w-236 w-100">
+              <img src="./assets/img/svg/Quarterly.svg" alt="Quarterly">
+              <h6 class="fs-xl fw-normal line-height-32  m-0 font-Helvetica"><span
+                  class="fw-bold ">Published</span> Quarterly</h6>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6  col-12  pt-lg-44 pt-4 ">
+            <div class="d-flex gap-lg-3 gap-2 align-items-center ">
+              <img src="./assets/img/svg/Grades.svg" alt="Grades">
+              <h6 class="fs-xl fw-normal line-height-32  m-0 font-Helvetica">Grades<span
+                  class="fw-bold"> 9–12, </span>Worldwide</h6>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6  col-12 pt-lg-44 pt-4 d-lg-flex d-block justify-content-center">
+            <div class="d-flex gap-lg-3 gap-2 align-items-center max-w-255 w-100  ">
+              <img src="./assets/img/svg/Zero.svg" alt="Zero">
+              <h6 class="fs-xl fw-normal line-height-32  m-0 font-Helvetica"><span class="fw-bold">Zero</span> Submission
+                Fees</h6>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6  col-12  pt-lg-44 pt-4 d-lg-flex d-block justify-content-end">
+            <div class="d-flex gap-lg-3 gap-2 align-items-center max-w-236 w-100 ">
+              <img src="./assets/img/svg/Access.svg" alt="Access">
+              <h6 class="fs-xl fw-normal line-height-32  m-0 font-Helvetica"><span class="fw-bold">Open</span> Access
+              </h6>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex w-100  justify-content-center pt-32">
+          <button class="btn-1  border-0  d-flex gap-10 align-items-center py-3 px-4  duration-300"><span
+              class="text z-1 fw-bold fs-xl line-height-32 font-Helvetica heading">Submit</span>
+            <img src="./assets/img/svg/arrowbtn.svg" alt="arrowbtn"></button>
+        </div>
       </div>
     </div>
   </section>
