remove overflow scroll

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
       </div>
       <div class="row border-top pb-lg-156 pb-sm-60 pb-5 z-1">
         <div class="col-md-3 col-12 z-1">
-          <div class="  max-w-md-338 allbtn2 d-md-block d-flex overflow-x-scroll">
+          <div class="  max-w-md-338 allbtn2 d-md-block d-flex overflow-x-md-scroll">
             <div class="tab-2 p-md-4  p-3 border-right d-flex justify-content-between tabbtn2  " onclick="clicktab('1tab')">
               <h5 class="fw-bold fs-lg line-height-25 font-Helvetica color-gray m-0 tab2-text">Political History</h5>
               <div class="d-md-block d-none">
