background image center

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           </div>
         </div>
       </div>
-      <div class="max-w-948 mx-auto pt-44 position-relative z-1">
+      <div class="max-w-948 mx-auto pt-sm-44 position-relative z-1">
         <div class="img-border position-relative">
           <img src="./assets/img/10.gif" alt="Frame13" class="w-100 rounded-6">
         </div>
@@ -961,7 +961,7 @@
       </div>
     </div>
   </section>
-  <section class="bg-fre-img position-relative background-cover bg-position-100">
+  <section class="bg-fre-img position-relative">
     <img src="./assets/img/svg/Ellipse101.svg" alt="Ellipse101"
       class="position-absolute Ellipse101 z-0   max-w-390 w-100 ">
     <img src="./assets/img/svg/Ellipse102.svg" alt="Ellipse102"
